refactor after review + fixed create method